[gd_scene load_steps=8 format=2]

[ext_resource path="res://Prefabs/User Interface/Button/Button.tscn" type="PackedScene" id=1]
[ext_resource path="res://Textures/MenuElements/PlayButton.png" type="Texture" id=2]
[ext_resource path="res://Components/User Interface/Interface/Interface.tscn" type="PackedScene" id=3]
[ext_resource path="res://Textures/MenuElements/DeleteSaveButton.png" type="Texture" id=4]
[ext_resource path="res://Textures/MenuElements/MuteMusicButton.png" type="Texture" id=5]
[ext_resource path="res://Textures/MenuElements/DeathByDeath.png" type="Texture" id=6]
[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=7]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 7 )

[node name="DeathByDeath" type="Sprite" parent="."]
position = Vector2( 56, 35 )
texture = ExtResource( 6 )

[node name="Play" parent="." instance=ExtResource( 1 )]
position = Vector2( 6, 80 )
button_size = Vector2( 19, 4 )
texture = ExtResource( 2 )

[node name="DeleteSave" parent="." instance=ExtResource( 1 )]
position = Vector2( 6, 100 )
button_size = Vector2( 51, 7 )
texture = ExtResource( 4 )

[node name="MuteMusic" parent="." instance=ExtResource( 1 )]
position = Vector2( 6, 120 )
button_size = Vector2( 45, 7 )
texture = ExtResource( 5 )

[node name="Interface" parent="." instance=ExtResource( 3 )]

[connection signal="pressed_ok" from="Play" to="." method="_on_Play_pressed_ok"]
[connection signal="pressed_ok" from="DeleteSave" to="." method="_on_DeleteSave_pressed_ok"]
[connection signal="pressed_ok" from="MuteMusic" to="." method="_on_MuteMusic_pressed_ok"]
